<resources>
    <string name="app_name">云合未来一体化系统</string>

    <string name="sign_in">登     录</string>
    <string name="login_title">请登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="system">系统</string>
    <string name="company">公司</string>

    <string-array name="system">
        <item>云合未来财务系统</item>
        <item>云合人事管理系统</item>
        <item>云合未来进销存系统</item>
        <item>云合分权编辑系统</item>
        <item>云合智慧门店收银系统</item>
        <item>云合排产管理系统</item>
        <item>云合教务管理系统</item>
    </string-array>


    <string-array name="type">
        <item>经营收入</item>
        <item>经营支出</item>
        <item>筹资收入</item>
        <item>筹资支出</item>
        <item>投资收入</item>
        <item>投资支出</item>
        <item>凭证字</item>
    </string-array>

    <string-array name="jijian_type">
        <item>科目</item>
        <item>客户/供应商/往来单位</item>
        <item>发票种类</item>
        <item>税率</item>
        <item>外币</item>
    </string-array>

    <string-array name="class_list">
        <item>资产类</item>
        <item>负债类</item>
        <item>权益类</item>
        <item>成本类</item>
        <item>损益类</item>
    </string-array>

    <string-array name="jijianpeizhi_class_list">
        <item>资产类</item>
        <item>负债类</item>
        <item>权益类</item>
    </string-array>

    <string-array name="liyisunyi_class_list">
        <item>支出</item>
        <item>收入</item>
    </string-array>

    <string-array name="baobiao_class_list">
        <item>年</item>
        <item>月</item>
        <item>日</item>
    </string-array>

    <string-array name="fapiao_type_list">
        <item>进项发票</item>
        <item>销项发票</item>
    </string-array>

    <string-array name="kaoqin_type_list">
        <item>出勤</item>
        <item>旷勤</item>
        <item>请假</item>
        <item>迟到</item>
        <item>早退</item>
        <item>休</item>
        <item></item>
    </string-array>

    <string-array name="gongzimingxi_type_list">
        <item>姓名</item>
        <item>部门</item>
        <item>岗位</item>
    </string-array>

    <string-array name="zhanghao_type_list">
        <item>正常</item>
        <item>锁死</item>
    </string-array>

    <string-array name="quanxian_type_list">
        <item></item>
        <item>查询</item>
        <item>修改</item>
    </string-array>

    <string-array name="quanxian_select_list">
        <item>×</item>
        <item>√</item>
    </string-array>

    <string-array name="view_name_list">
        <item>工作台</item>
        <item>工作台权限设置</item>
        <item>部门权限设置</item>
        <item>公司数据分析</item>
        <item>人员管理</item>
        <item>人员权限设置</item>
        <item>人员数据分析</item>
        <item>工作台使用状态</item>
        <item>工作台公式设置</item>
    </string-array>

    <string-array name="yes_no_list">
        <item>是</item>
        <item>否</item>
    </string-array>

    <string-array name="sex_list">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="month_list">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>

    <string-array name="ri_array">
        <item>出勤</item>
        <item>缺勤</item>
        <item>病假</item>
    </string-array>

    <string-array name="xingqi_array">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期天</item>
    </string-array>

    <string-array name="state_list">
        <item>在职</item>
        <item>离职</item>
    </string-array>

    <string-array name="column_list">
        <item>A列-Z列</item>
        <item>AA列-AZ列</item>
        <item>BA列-BZ列</item>
        <item>CA列-CV列</item>
        <item>A列-CV列</item>
    </string-array>

    <string-array name="tingyong_list">
        <item>否</item>
        <item>是</item>
    </string-array>

    <string-array name="zhanghao_list">
        <item>正常</item>
        <item>冻结</item>
    </string-array>

    <string-array name="jiaowu_zhuangtai_list">
        <item>正常</item>
        <item>禁用</item>
    </string-array>

    <string-array name="jiaowu_quanxian_list">
        <item>√</item>
        <item>×</item>
    </string-array>

    <string-array name="beizhu1_list">
        <item>请选择销售类型</item>
        <item>折扣</item>
        <item>热销</item>
        <item>新品</item>
    </string-array>

    <!-- 打印类型显示名称 -->
    <string-array name="print_types">
        <item>请选择打印类型</item>
        <item>出库</item>
        <item>入库</item>
        <item>调拨出库</item>
        <item>调拨入库</item>
        <item>盘亏出库</item>
        <item>盘盈入库</item>
    </string-array>

    <!-- 打印类型对应的值 -->
    <string-array name="print_types_value">
        <item>none</item>
        <item>chuku</item>
        <item>ruku</item>
        <item>diaobochuku</item>
        <item>diaoboruku</item>
        <item>pankuichuku</item>
        <item>panyingruku</item>
    </string-array>

</resources>